# pulsar

./: .gitignore  CONTRIBUTING.md  README.md  jest.config.json  package-lock.json  package.json  sdk-versions.json  simple-test.html
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: _build-android-kmp.yml  (+17 more)
PulsarApp/: .env.example  .gitignore  .nanoicons.json  app.config.js  app.json  babel.config.js  eas.json  eslint.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js
animations/: README.md  pyproject.toml
animations/example/: package-lock.json  package.json
animations/src/pulsar_lottie/: __init__.py  cli.py  emitter.py  events.py  features.py  mapper.py  parser.py  sampler.py
animations/tests/: test_pipeline.py  test_real_animations.py
animations/tests/fixtures/: bounce.json  draw_on.json  fade.json
ci/: configs.yml
docs/: .gitignore  astro.config.mjs  config.ts  package-lock.json  package.json  start.sh  tsconfig.json
figma/: .gitignore  AGENT_CONTEXT.md  FIGMA_MCP_INTEGRATION.md  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts  vite.main.config.ts
pulsar-haptics/: SKILL.md
scripts/: install.sh  lint-js.sh  lint-kotlin.sh  lint-swift.sh  lint.sh  sync-native.sh  sync-sdk-versions.mjs
skills/: SKILL.md
src/: app.ts  connection-manager.ts  middleware.ts  routes.ts  types.ts  websocket-handler.ts
src_old/: constants.ts  server.ts  websocket.ts
tests/: http.test.ts  websocket.test.ts
tools/: sync-sdk-versions.mjs
(+1307 files in other folders)
